2022-09-08 Felix Salfelder <felix AT salfelder.org>

	* device/lib/incl.mk:
	  Fix %.rel rules. Thanks to Job Bolle, see discussion/1865.

2022-09-08 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/Makefile.in:
	  avoid tm-preds.h cleanup once more.

2022-09-07 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCpeeph.c,
	  src/z80/peeph.def,
	  support/regression/tests/bug-3478.c:
	  Fix bug #3478.

2022-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-3471.c:
	  Fix bug #3471.

2022-09-06 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/Makefile.in,
	  support/cpp/libbacktrace/Makefile.am:
	  Revisit don't clean no-longer autogenerated files.

2022-09-06 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/SDCCcse.c,
	  support/regression/tests/bug-3470.c:
	  Fix part of bug #3470.

2022-09-04 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* Merge cpp branch to trunk.

2022-09-04 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/hash-table.h:
	  Revert a compile warning fix.

2022-09-02 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc,
	  support/cpp/gcc/ggc-common.cc,
	  support/cpp/gcc/hash-map.h,
	  support/cpp/gcc/hash-table.h,
	  support/cpp/gcc/vec.h:
	  Fix compile warnings

2022-09-01 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/valdiag/tests/universal.c,
	  support/valdiag/tests/universal2.c:
	  Separate out a test that needs to reside in a file on its own, since the diagnostic is emitted even inside #if 0.

2022-08-31 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* support/regression/tests/checkedint.c.in:
	  Disable test for mcs51 medium memory model, where it fails due to lack of memory.

2022-08-31 Felix Salfelder <felix AT salfelder.org>

	* sdcc/support/cpp/gcc/opts.cc,
	  sdcc/support/cpp/libcpp/mkdeps.cc: